section alignment fixed

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 }
 .intro-text{
 
-    margin-top: 200px;
+    margin-top: 250px;
 }
 .intro-text a {
 
